<resources>
    <string name="app_name">BlueChip</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Dash Board</item>
        <item>Jobs</item>
        <item>View Report</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="nav_dashboard">Dash Board</string>
    <string name="nav_jobs">Jobs</string>
    <string name="nav_viewreport">View Report</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inventory">Add Inventory</string>
    <string name="login">LOGIN</string>
    <string name="forgot_pwd">FORGOT PASSWORD?</string>
    <string name="send_pwd">Reset PASSWORD</string>
    <string name="prompt_password">password</string>
    <string name="prompt_email">email</string>
    <string name="company_name">Blue Chip Inventory</string>


    <string name="back">Back</string>


    <string name="tap_to_close_msg">Tap to Close.</string>

    <string name="progress_message">Loading</string>

    <string name="server_error">Server Error</string>
    <string name="server_error_msg">Server error. Please try again in a few moments.</string>

    <string name="no_internet">No Internet Connection</string>
    <string name="try_again">Please try again.</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="permission_record">"Record Permission are need"
    </string>
    <string name="title_activity_dashboard">DashboardActivity</string>


    <string name="action_settings">Settings</string>
    <string name="dash_name"></string>
    <string name="title_activity_inventory">InventoryActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="action_sign_in">Login</string>
    <string name="speech_prompt">Say Something</string>
    <string name="speech_not_supported">Device Do not Support</string>
    <string name="login_id">john.dev@gmail.com</string>
    <string name="login_pwd">12345</string>
    <string name="msg_enable_internet">Please enable  internet . .</string>
    <string name="msg_no_record_found">No record found for current Job.</string>


</resources>
