<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item

            android:id="@+id/nav_dashboard"
            android:icon="@drawable/icons_globe"
            android:title="@string/nav_dashboard"/>
        <item
            android:id="@+id/nav_jobs"
            android:icon="@drawable/icons_task"
            android:title="@string/nav_jobs"/>
        <item
            android:id="@+id/nav_viewreport"
            android:icon="@drawable/icons_report"
            android:title="@string/nav_viewreport"/>



        <!--<item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_notifications"
            android:visible="false"/>-->

    </group>


    <item android:title="Account">
        <menu>

            <group android:checkableBehavior="single">

                <!--<item

                    android:id="@+id/nav_about_us"
                    android:title="@string/nav_about_us"
                    android:visible="false"/>
                <item
                    android:id="@+id/nav_privacy_policy"
                    android:title="@string/privacy_policy"
                    android:visible="false"
                    />-->
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/icons_setting"
                    android:title="@string/nav_settings"
                    />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/icons_logout"
                    android:title="@string/action_logout"/>
            </group>
        </menu>
    </item>


</menu>
