<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:padding="0.5dp"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_app_blue"
        android:gravity="bottom"

        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Enter your email address and we will send you a link to reset your password."
            android:textColor="@color/white"

            />

        <EditText

            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_text_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/selected_edit_text_white"
            android:gravity="center_vertical"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minLines="1"
            android:paddingLeft="5dp"
            android:text=""
            android:textColor="@color/color_grey_dark_text"
            android:textColorHint="@color/transparent_app_blue"
            android:textSize="@dimen/input_text"
            />



            <Button
                android:id="@+id/button_reset_pwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="20dp"

                android:background="@drawable/bg_button_white"
                android:text="@string/send_pwd"
                android:textColor="@drawable/text_color_blue_white"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/button_back"

                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@drawable/text_color_white_grey"

                android:gravity="right|center_horizontal"
                android:text="@string/back"



                />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/progress_forget_pwd"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:background="@color/transparent_app_blue"
        android:gravity="center"
        android:visibility="gone"


        >

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:focusableInTouchMode="false"

            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/custom_progress"


            />

    </LinearLayout>

</RelativeLayout>